# SFML_Projects

./: .gitignore
Boids/sim_1/: Animator.h  Makefile
Boids/sim_1/src/: .Animator.cpp.swp  .Vehical.cpp.swp  .main.cpp.swp  Animator  Animator.cpp  Animator.h  Vehical.cpp  Vehical.h  main.cpp
EVE_Client/: .gitignore  CMakeLists.txt  Makefile
EVE_Client/.deps/: main.Po
EVE_Client/src/: Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  Clickable.cpp  Clickable.h  Client.cpp  Client.h  Game.cpp  Game.h  Singleton.cpp  Singleton.h  main.cpp
